<?xml version="1.0" encoding="utf-8"?>

<!--
/* 
** Copyright 2012 Google Inc. All Rights Reserved.
** 
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
** 
**   http://www.apache.org/licenses/LICENSE-2.0
** 
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/splash"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|bottom">
  <LinearLayout
		  android:layout_width="fill_parent" 
		  android:layout_height="0dip"
      android:layout_weight="2">
    <!-- Draw nothing. -->
  </LinearLayout>
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent" 
      android:layout_height="0dip"
      android:layout_weight="3"
      android:gravity="center|top">
		<Button 
		  android:text="@string/settingsIntentButton" 
		  android:id="@+id/settingsIntentButton" 
		  android:layout_width="250dip" 
		  android:layout_height="40dip"
		  android:layout_marginBottom="20dip"/>
		<Button 
      android:text="@string/predictiveButtonDisabled" 
      android:id="@+id/predictiveButton" 
      android:layout_width="250dip" 
      android:layout_height="40dip"
      android:layout_marginBottom="20dip"/>
		<EditText 
		    android:text=""
		    android:hint="@string/tryItOutText"
		    android:singleLine="true"
		    android:layout_width="220dip"
		    android:layout_height="40dip"
		    android:layout_marginBottom="20dip"/>
  </LinearLayout>
  
</LinearLayout>